--- a/todo.org
+++ b/todo.org
@@ -1,9 +1,11 @@
 
 * TODO Separate tasks into *xjc* and *jaxb-generate-dependency-graph*
-** TODO Add ~xjc dependsOn(jaxb-generate-dependency-graph)~
+** DONE Add ~xjc dependsOn(jaxb-generate-dependency-graph)~
+   CLOSED: [2012-12-15 Sat 15:44]
 
 * TODO add the extra external binding files until I figure out a way to share memory between tasks??
 
 * TODO Add the includes xsd processing, not there yet
 
-* TODO add a configuration in the Plugin class for the *jaxb* configuration
+* DONE add a configuration in the Plugin class for the *jaxb* configuration
+  CLOSED: [2012-12-15 Sat 15:44]
