--- a/todo.org
+++ b/todo.org
@@ -7,12 +7,18 @@
 * DONE add the extra external binding files until I figure out a way to share memory between tasks??
   CLOSED: [2012-12-16 Sun 10:06]
 ** if there could be some way to share memory between tasks, I could eliminate the need for this
-*** TODO Fix the external binding,
-*** TODO need to take away that propert externalBindings in the Extension class
-*** TODO do it in code because not every namespace needs that external set and needs to be dynamic
-*** TODO get the file location that the external import lists, if not gives location, don't put in the list
-*** TODO go through the external import file, find imports and go to those files and find imports
-*** TODO go through externam import file and locate includs and find the imports there as well
+*** DONE Fix the external binding,
+    CLOSED: [2012-12-17 Mon 23:04]
+*** DONE need to take away that propert externalBindings in the Extension class
+    CLOSED: [2012-12-17 Mon 23:04]
+*** DONE do it in code because not every namespace needs that external set and needs to be dynamic
+    CLOSED: [2012-12-17 Mon 23:04]
+*** DONE get the file location that the external import lists, if not gives location, don't put in the list
+    CLOSED: [2012-12-17 Mon 23:04]
+*** DONE go through the external import file, find imports and go to those files and find imports
+    CLOSED: [2012-12-17 Mon 23:04]
+*** DONE go through externam import file and locate includs and find the imports there as well
+    CLOSED: [2012-12-17 Mon 23:04]
 * DONE Add the includes xsd processing, not there yet
   CLOSED: [2012-12-16 Sun 21:18]
 ** DONE Once done with the includes processing, check for empty xsdFiles fields and if there are, then:
@@ -28,3 +34,9 @@
   CLOSED: [2012-12-16 Sun 09:55]
 * TODO is it reasonable to add anything for external include statements??
 ** Can't check for namespace, becuase includes doesn't use that, but could check the startingDir
+* TODO put processing in for illegal arguments in the XJC tasks, and throw errors.
+** TODO Like that every episode file binding actually exists
+** TODO That directories exist
+*** TODO Binding Diretory
+*** TODO Episodes directoty
+*** etc.
