--- a/todo.org
+++ b/todo.org
@@ -34,9 +34,24 @@
   CLOSED: [2012-12-16 Sun 09:55]
 * TODO is it reasonable to add anything for external include statements??
 ** Can't check for namespace, becuase includes doesn't use that, but could check the startingDir
-* TODO put processing in for illegal arguments in the XJC tasks, and throw errors.
-** TODO Like that every episode file binding actually exists
-** TODO That directories exist
-*** TODO Binding Diretory
-*** TODO Episodes directoty
+* DONE put processing in for illegal arguments in the XJC tasks, and throw errors.
+  CLOSED: [2012-12-18 Tue 13:24]
+** DONE Like that every episode file binding actually exists
+   CLOSED: [2012-12-18 Tue 13:24]
+** DONE That directories exist
+   CLOSED: [2012-12-18 Tue 13:24]
+*** DONE Binding Diretory
+    CLOSED: [2012-12-18 Tue 13:24]
+*** DONE Episodes directoty
+    CLOSED: [2012-12-18 Tue 13:24]
 *** etc.
+* TODO jaxbSchemaDestinationDirectory is defaulted to
+  jaxbSchemaDestinationDirectory = "src/main/java"
+  in Plugin configruation. it should be something more like 
+  "${project.dir}/src/main/java" 
+  because currently you can only run it from it's subproject dir, not the top level. 
+* DONE Make a utility class with methods like isAlreadyInList etc.
+  CLOSED: [2012-12-19 Wed 23:47]
+* TODO Instead of populating a map as an intermediary, populate the NamespaceMetaData appropriately
+* TODO if @targetNamespace is empty, will populate with a "null", then should throw a warning if encountering a null when running XJC
+
