--- a/todo.org
+++ b/todo.org
@@ -52,9 +52,11 @@
   because currently you can only run it from it's subproject dir, not the top level. 
 * DONE Make a utility class with methods like isAlreadyInList etc.
   CLOSED: [2012-12-19 Wed 23:47]
-* TODO Instead of populating a map as an intermediary, populate the NamespaceMetaData appropriately
+* DONE Instead of populating a map as an intermediary, populate the NamespaceMetaData appropriately
+  CLOSED: [2013-01-22 Tue 14:20]
 * TODO if @targetNamespace is empty, will populate with a "null", then should throw a warning if encountering a null when running XJC
-* TODO apply plugin JavaPlugin
+* DONE apply plugin JavaPlugin
+  CLOSED: [2013-01-22 Tue 14:21]
   Lose one extra line of code in build.gradle or whatee
 * TODO The extra code that is in the XJCTask could be factored out and could have better tests written for it
 * TODO Make a better test suite covering
