--- a/todo.org
+++ b/todo.org
@@ -29,12 +29,15 @@
   CLOSED: [2012-12-15 Sat 15:44]
 * DONE Add error checkers and throw specific errors if things aren't where they should be
   CLOSED: [2013-01-22 Tue 14:24]
-* TODO add groovy docs to the methods and variables
+* DONE add groovy docs to the methods and variables
+  CLOSED: [2013-01-24 Thu 18:54]
 * TODO add inputs and outputs dependencies to maybe not run a task if you don't need to
 * DONE add the binding includes portion
   CLOSED: [2012-12-16 Sun 09:55]
-* TODO is it reasonable to add anything for external include statements??
+* DONE is it reasonable to add anything for external include statements??
+  CLOSED: [2013-01-22 Tue 15:24]
 ** Can't check for namespace, becuase includes doesn't use that, but could check the startingDir
+** I don't think it is reasonable, who would include something in a different top level directory?
 * DONE put processing in for illegal arguments in the XJC tasks, and throw errors.
   CLOSED: [2012-12-18 Tue 13:24]
 ** DONE Like that every episode file binding actually exists
@@ -62,10 +65,15 @@
 * DONE apply plugin JavaPlugin
   CLOSED: [2013-01-22 Tue 14:21]
   Lose one extra line of code in build.gradle or whatee
-* TODO The extra code that is in the XJCTask could be factored out and could have better tests written for it
+* DONE The extra code that is in the XJCTask could be factored out and could have better tests written for it
+  CLOSED: [2013-01-24 Thu 18:54]
 * TODO Make a better test suite covering
 ** xsd imports
 ** xsd includes
 ** xsd external imported namespaces
+* DONE override set namespace in NamespaceMetaData to additionally convert namespace to episode name automatically
+  CLOSED: [2013-01-24 Thu 18:17]
 
 
+
+* TODO Fix the failing test case that shifts a namespace down, but it must also shift the namespace that this depends on down as well.
